--- a/penz/lista.html
+++ b/penz/lista.html
@@ -245,17 +245,17 @@
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                   <h6>Torres - Centro</h6>
-                  <p class="card-text offset-list">
+                  <p class="card-text offset-list ">
                     <i class="fas fa-ruler"></i>
                     68m² |
                     <i class="fas fa-bed"></i>
                     3 quartos |
                     <i class="fas fa-car"></i>
                     3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
                       Conversar</a>
                   </div>
                 </div>
@@ -274,77 +274,17 @@
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                   <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
+                  <p class="card-text offset-list ">
                     <i class="fas fa-ruler"></i>
                     68m² |
                     <i class="fas fa-bed"></i>
                     3 quartos |
                     <i class="fas fa-car"></i>
                     3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
-                      Conversar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
-              <div class="card" style="width: 100%;">
-                <a href="detalhes.html">
-                  <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
-                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
-                      <p>R$ 45.000,00</p>
-                    </div>
-                  </div>
-                </a>
-                <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
-                  <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
-                    <i class="fas fa-ruler"></i>
-                    68m² |
-                    <i class="fas fa-bed"></i>
-                    3 quartos |
-                    <i class="fas fa-car"></i>
-                    3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
-                      Conversar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
-              <div class="card" style="width: 100%;">
-                <a href="detalhes.html">
-                  <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
-                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
-                      <p>R$ 45.000,00</p>
-                    </div>
-                  </div>
-                </a>
-                <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
-                  <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
-                    <i class="fas fa-ruler"></i>
-                    68m² |
-                    <i class="fas fa-bed"></i>
-                    3 quartos |
-                    <i class="fas fa-car"></i>
-                    3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
                       Conversar</a>
                   </div>
                 </div>
@@ -365,17 +305,17 @@
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                   <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
+                  <p class="card-text offset-list ">
                     <i class="fas fa-ruler"></i>
                     68m² |
                     <i class="fas fa-bed"></i>
                     3 quartos |
                     <i class="fas fa-car"></i>
                     3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
                       Conversar</a>
                   </div>
                 </div>
@@ -394,17 +334,17 @@
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                   <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
+                  <p class="card-text offset-list ">
                     <i class="fas fa-ruler"></i>
                     68m² |
                     <i class="fas fa-bed"></i>
                     3 quartos |
                     <i class="fas fa-car"></i>
                     3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
                       Conversar</a>
                   </div>
                 </div>
@@ -425,17 +365,17 @@
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                   <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
+                  <p class="card-text offset-list ">
                     <i class="fas fa-ruler"></i>
                     68m² |
                     <i class="fas fa-bed"></i>
                     3 quartos |
                     <i class="fas fa-car"></i>
                     3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
                       Conversar</a>
                   </div>
                 </div>
@@ -454,17 +394,77 @@
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                   <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list">
+                  <p class="card-text offset-list ">
                     <i class="fas fa-ruler"></i>
                     68m² |
                     <i class="fas fa-bed"></i>
                     3 quartos |
                     <i class="fas fa-car"></i>
                     3 vagas</p>
-                  <div class="row botoes-card offset-list">
-                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
-                      <i class="fab fa-whatsapp mr-1"></i>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
+              <div class="card" style="width: 100%;">
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-list ">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
+              <div class="card" style="width: 100%;">
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-list ">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
                       Conversar</a>
                   </div>
                 </div>
