--- a/penz/index.html
+++ b/penz/index.html
@@ -229,16 +229,16 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-sm-1">
+                                                <p class="card-text offset-list offset-sm-1">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-list">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                <div class="row botoes-card ">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
@@ -260,16 +260,16 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-sm-1">
+                                                <p class="card-text offset-list offset-sm-1">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-list">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                <div class="row botoes-card ">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
@@ -291,16 +291,16 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-sm-1">
+                                                <p class="card-text offset-list offset-sm-1">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-list">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                <div class="row botoes-card ">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
@@ -322,16 +322,16 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-sm-1">
+                                                <p class="card-text offset-list offset-sm-1">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-list">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                <div class="row botoes-card ">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
@@ -353,16 +353,16 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-sm-1">
+                                                <p class="card-text offset-list offset-sm-1">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-list">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                <div class="row botoes-card ">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
@@ -384,16 +384,16 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-sm-1">
+                                                <p class="card-text offset-list offset-sm-1">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-list">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                <div class="row botoes-card ">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
