--- a/penz/index.html
+++ b/penz/index.html
@@ -237,7 +237,7 @@
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
                                                 <div class="row botoes-card ">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5 ml-1" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
@@ -268,7 +268,7 @@
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
                                                 <div class="row botoes-card ">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5 ml-1" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
@@ -299,7 +299,7 @@
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
                                                 <div class="row botoes-card ">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5 ml-1" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
@@ -330,7 +330,7 @@
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
                                                 <div class="row botoes-card ">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5 ml-1" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
@@ -361,7 +361,7 @@
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
                                                 <div class="row botoes-card ">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5 ml-1" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
@@ -392,7 +392,7 @@
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
                                                 <div class="row botoes-card ">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5" style="">Ver detalhes</a>
+                                                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-4 col-5 ml-1" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
                                                         <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
