--- a/penz/index.html
+++ b/penz/index.html
@@ -220,7 +220,7 @@
                                         <div class="card" style="width: 100%;">
                                             <a href="detalhes.html">
                                                 <div style="position: relative; display: inline-block">
-                                                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                                                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                                                         <p>R$ 45.000,00</p>
                                                     </div>
@@ -229,7 +229,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-list offset-sm-1">
+                                                <p class="card-text">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
@@ -251,7 +251,7 @@
                                         <div class="card" style="width: 100%;">
                                             <a href="detalhes.html">
                                                 <div style="position: relative; display: inline-block">
-                                                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                                                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                                                         <p>R$ 45.000,00</p>
                                                     </div>
@@ -260,7 +260,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-list offset-sm-1">
+                                                <p class="card-text">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
@@ -282,7 +282,7 @@
                                         <div class="card" style="width: 100%;">
                                             <a href="detalhes.html">
                                                 <div style="position: relative; display: inline-block">
-                                                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                                                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                                                         <p>R$ 45.000,00</p>
                                                     </div>
@@ -291,7 +291,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-list offset-sm-1">
+                                                <p class="card-text">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
@@ -313,7 +313,7 @@
                                         <div class="card" style="width: 100%;">
                                             <a href="detalhes.html">
                                                 <div style="position: relative; display: inline-block">
-                                                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                                                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                                                         <p>R$ 45.000,00</p>
                                                     </div>
@@ -322,7 +322,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-list offset-sm-1">
+                                                <p class="card-text">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
@@ -344,7 +344,7 @@
                                         <div class="card" style="width: 100%;">
                                             <a href="detalhes.html">
                                                 <div style="position: relative; display: inline-block">
-                                                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                                                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                                                         <p>R$ 45.000,00</p>
                                                     </div>
@@ -353,7 +353,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-list offset-sm-1">
+                                                <p class="card-text">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
@@ -375,7 +375,7 @@
                                         <div class="card" style="width: 100%;">
                                             <a href="detalhes.html">
                                                 <div style="position: relative; display: inline-block">
-                                                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                                                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                                                         <p>R$ 45.000,00</p>
                                                     </div>
@@ -384,7 +384,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
                                                 <p class="card-text">Torres - Centro</p>
-                                                <p class="card-text offset-list offset-sm-1">
+                                                <p class="card-text">
                                                     <i class="fas fa-ruler"></i>
                                                     68m² |
                                                     <i class="fas fa-bed"></i>
