--- a/penz/lista.html
+++ b/penz/lista.html
@@ -236,7 +236,7 @@
               <div class="card" style="width: 100%;">
                 <a href="detalhes.html">
                   <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                       <p>R$ 45.000,00</p>
                     </div>
@@ -265,7 +265,7 @@
               <div class="card" style="width: 100%;">
                 <a href="detalhes.html">
                   <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                       <p>R$ 45.000,00</p>
                     </div>
@@ -296,7 +296,7 @@
               <div class="card" style="width: 100%;">
                 <a href="detalhes.html">
                   <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                       <p>R$ 45.000,00</p>
                     </div>
@@ -325,67 +325,7 @@
               <div class="card" style="width: 100%;">
                 <a href="detalhes.html">
                   <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
-                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
-                      <p>R$ 45.000,00</p>
-                    </div>
-                  </div>
-                </a>
-                <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
-                  <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list ">
-                    <i class="fas fa-ruler"></i>
-                    68m² |
-                    <i class="fas fa-bed"></i>
-                    3 quartos |
-                    <i class="fas fa-car"></i>
-                    3 vagas</p>
-                  <div class="row botoes-card ">
-                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-1 col-5 ml-2 ml-md-0" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
-                      <i class="fab fa-whatsapp"></i>
-                      Conversar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
-              <div class="card" style="width: 100%;">
-                <a href="detalhes.html">
-                  <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
-                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
-                      <p>R$ 45.000,00</p>
-                    </div>
-                  </div>
-                </a>
-                <div class="card-body">
-                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
-                  <p class="card-text">Torres - Centro</p>
-                  <p class="card-text offset-list ">
-                    <i class="fas fa-ruler"></i>
-                    68m² |
-                    <i class="fas fa-bed"></i>
-                    3 quartos |
-                    <i class="fas fa-car"></i>
-                    3 vagas</p>
-                  <div class="row botoes-card ">
-                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-1 col-5 ml-2 ml-md-0" style="">Ver detalhes</a>
-                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
-                      <i class="fab fa-whatsapp"></i>
-                      Conversar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
-              <div class="card" style="width: 100%;">
-                <a href="detalhes.html">
-                  <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                       <p>R$ 45.000,00</p>
                     </div>
@@ -416,7 +356,7 @@
               <div class="card" style="width: 100%;">
                 <a href="detalhes.html">
                   <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                       <p>R$ 45.000,00</p>
                     </div>
@@ -445,7 +385,67 @@
               <div class="card" style="width: 100%;">
                 <a href="detalhes.html">
                   <div style="position: relative; display: inline-block">
-                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-list ">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-1 col-5 ml-2 ml-md-0" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
+              <div class="card" style="width: 100%;">
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-list ">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+                  <div class="row botoes-card ">
+                    <a href="detalhes.html" class="btn btn-primary mr-md-4 mr-1 col-5 ml-2 ml-md-0" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-6">
+                      <i class="fab fa-whatsapp"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 offset-0 offset-md-0 mt-2">
+              <div class="card" style="width: 100%;">
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top w-100" src="src/imgs/casa1.jpeg" alt="Card image cap">
                     <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
                       <p>R$ 45.000,00</p>
                     </div>
