--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -141,7 +141,7 @@
 
               <div class="text-center mt-3">
                 <div class="row mx-auto my-auto">
-                  <div id="vendasCarousel" class="carousel imoveisCarousel slide w-100" data-ride="carousel">
+                  <div id="vendasCarousel" class="carousel imoveisCarousel slide" data-ride="carousel">
                     <div class="carousel-inner vendasCarousel-inner w-100" role="listbox">
                       <div class="carousel-item active">
                         <div class="col-12">
