--- a/penz/index.html
+++ b/penz/index.html
@@ -164,7 +164,7 @@
                         <li data-target="#destaquesCarousel" data-slide-to="1"></li>
                         <li data-target="#destaquesCarousel" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner row pl-2" style="height:200px">
+                    <div class="carousel-inner row pl-2">
                         <div class="carousel-item active">
                             <img class="d-block w-100 h-100" src="src/imgs/bell.jpeg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
