--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -89,8 +89,9 @@
 												<span class="lieu">Torres, RS</span>
 												<span class="dates">05/2019 - Atualmente</span>
 												<p>Atuo como Desenvolvedor Freelancer, para serviços temporários, tendo nesse meio tempo, trabalhado em projetos utilizando Laravel, Angular, ReactJs, Node, PHP e HTML/CSS.</p>
-											<p>https://www.penzimoveis.com.br <br>
-											<p>https://www.codige.com.br</p>
+											<p> <a href="https://www.penzimoveis.com.br">Penz Imóveis</a> 
+                                             <br>
+											    <a href="https://www.codige.com.br">Codige</a> </p>
 										</li>
 										<li>
 												<h4>
