--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -49,7 +49,7 @@
 												<strong>Mobile</strong>
 												e
 												<strong>WEB</strong>, trabalhando com o cliente desde o desenvolvimento da ideia até a implementação do sistema em produção.</p>
-										<p>Ah, para quem queira saber e ache relevante, sou
+										<p>Ah, sou
 												<strong>PNE</strong>
 												(Portador de Necessidades Especiais) devido à uma queda de bicicleta aos 8 anos, possuo Hemiparesia à esquerda.</p>
 								</div>
@@ -171,6 +171,7 @@
 						<!-- Loisirs -->
 						<div class="grid_8 loisirs">
 								<h3>Habilidades</h3>
+							
 								<p>
 										Autodidata</p>
 								<p>Trabalho em equipe</p>
