--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -76,7 +76,7 @@
 
 						<!-- Expériences -->
 					<hr>
-					<br>
+					<div style="margin-top:30px"></div>
 					<hr>
 						<div class="grid_16 experiences">
 								<h3>Experiências</h3>
