--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
 			
 	
 	</section>		
-		
+		<script SameSite="None; Secure" src="https://static.landbot.io/landbot-3/landbot-3.0.0.js"></script>
+<div id="myLandbot" style="width: 100%; height: 500px"></div>
+<script>
+  var myLandbot = new Landbot.Container({
+    container: '#myLandbot',
+    configUrl: 'https://chats.landbot.io/v3/H-809255-2V28ZSG8XW8UTH1V/index.json',
+  });
+</script>
 	<footer>
 		<hr class="clear">
 		<p>&copy 2019: Desenvolvido por @rminossi</p>
